[package]
name = "FireWG-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "firewg_rs"
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[dependencies]
kernel-alloc = "0.2.1"
kernel-log = "0.1.2"
log = "0.4.17"
boringtun = "0.5.2"
x25519-dalek = { version = "2.0.0-pre.1", default-features = false, features = ["u64_backend"] }
base64 = { version = "0.21.0", default-features = false, features = ["alloc"] }
spin = "0.9.7"
smoltcp = { version = "0.9.1", default-features = false, features = ["proto-ipv4"] }

[patch.crates-io]
hifitime = { path = "../hifitime" } # fix fmod linking bug
boringtun = { path = "../boringtun" }
ring = { path = "../ring" } # disable RTC & assert