[package]
name = "FireWG-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "firewg_rs"
crate-type = ["staticlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
debug = true

[dependencies]
kernel-alloc = "0.2.1"
kernel-log = "0.1.2"
log = "0.4.17"
boringtun = "0.5.2"
x25519-dalek = { version = "2.0.0-pre.1", default-features = false, features = ["u64_backend"] }
base64 = { version = "0.21.0", default-features = false, features = ["alloc"] }
spin = "0.9.7"

[patch.crates-io]
boringtun = { path = "../boringtun" }
hifitime = { path = "../hifitime" } # fix fmod linking bug
ring = { path = "../ring" } # disable RTC & assert; compile C code in kernel mode
getrandom = { path = "../getrandom" } # force the use of rdrand