[package]
name = "boringtun"
description = "a port of boringtun for no_std"
version = "0.5.2"
edition = "2021"

[lib]
name = "boringtun"
crate-type = ["lib"]

[profile.dev]
panic = "abort"

[dependencies]
base64 = { version = "0.21.0", default-features = false }
hex = { version = "0.4", default-features = false }
untrusted = "0.9.0"
tracing = { version = "0.1.37", default-features = false }
ring = { version = "0.16", default-features = false }
x25519-dalek = { version = "2.0.0-pre.1", default-features = false, features = ["u64_backend", "reusable_secrets"] }
rand_core = { version = "0.6.4", default-features = false, features = ["getrandom"] }
chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["alloc", "getrandom"] }
aead = "0.5.1"
blake2 = { version = "0.10.6", default-features = false }
hmac = "0.12.1"

# replace the mutex with a spinlock.
# Refer to https://matklad.github.io/2020/01/02/spinlocks-considered-harmful.html
# I haven't looked at the inner working of BoringTun yet, will come back later...
spin = "0.9.5"
hifitime = { version = "3.8.0", default-features = false }
smoltcp = { version = "0.9.1", default-features = false, features = ["proto-ipv4", "proto-ipv6"] } # replace std::net
log = "0.4.17"

[features]
mock-instant = []

[dev-dependencies]
etherparse = "0.13"
tracing-subscriber = "0.3.1"
criterion = { version = "0.4.0", features = ["html_reports"] }
windows = { version = "0.44.0", features = ["Win32_System_SystemInformation", "Win32_Foundation"] }
once_cell = "1.17.1"
